--- a/KharlamovaAO_3.2.ipynb
+++ b/KharlamovaAO_3.2.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Метод опорных векторов\n",
-    "Цель работы\n",
+    "Цель работы:\n",
     "Изучить работу метода опорных векторов для решения задач классификации и регрессии, познакомиться с основными особенностями и вариациями данного метода. Изучить соответствующие классы библиотеки sklearn, их параметры и атрибуты, применимые на практике.\n",
     "\n",
-    "Содержание работы\n",
+    "Содержание работы:\n",
     "Сгенерируйте линейно разделимый датасет для классификации из двух признаков. Постройте на нем опорно-векторный классификатор без ядра с параметром С=100. Изобразите границу принятия решения и линию зазора на графике.\n",
     "Сгенерируйте линейно неразделимый датасет с зазором между классами. Повторите виуальный анализ на нем.\n",
     "Сгенерируйте неразделимый датасет так, чтобы классы пересекались. Повторите построение и оценку метода опорных векторов на нем."
@@ -1571,11 +1571,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Контрольные вопросы\n",
+    "# Контрольные вопросы:\n",
     "\n",
     "1. Чем отличается класс SVC и LinearSVC в библиотеке sklearn при использовании метода опорных векторов без ядра?\n",
     "\n",
-    "- SVC использует более общий алгоритм для SVM, подходит для любых ядер, включая линейное. При использовании линейного ядра работает так же, как и LinearSVC, но может быть медленнее.\n",
+    "- SVC использует общий алгоритм для SVM и подходит для любых ядер, включая линейное. При использовании линейного ядра работает так же, как и LinearSVC, но может быть медленнее.\n",
     "\n",
     "- LinearSVC оптимизирован для работы только с линейным ядром и использует более эффективный метод оптимизации (метод стохастического градиентного спуска), что делает его быстрее на больших датасетах."
    ]
@@ -1597,7 +1597,7 @@
     "- Гауссово (RBF) ядро:\n",
     "\n",
     "Граница решения: Сложная, часто «волнообразная» и гибкая, может адаптироваться к данным с произвольной формой.\n",
-    "Очень мощное ядро, которое может работать с сильно перекрывающимися классами, создает зазор вокруг каждого класса."
+    "Мощное ядро, которое может работать с сильно перекрывающимися классами, создает зазор вокруг каждого класса."
    ]
   },
   {
@@ -1606,7 +1606,7 @@
    "source": [
     "3. Как метод опорных векторов работает в задачах множественной классификации?\n",
     "\n",
-    "Метод опорных векторов (SVM) для задач множественной классификации обычно реализуется с помощью подходов \"один против всех\" (OvA) или \"один против одного\" (OvO).\n",
+    "Метод опорных векторов для задач множественной классификации обычно реализуется с помощью подходов \"один против всех\" (OvA) или \"один против одного\" (OvO).\n",
     "\n",
     "- Один против всех (OvA):\n",
     "\n",
@@ -1616,7 +1616,7 @@
     "\n",
     "- Один против одного (OvO):\n",
     "\n",
-    "Для каждой пары классов строится отдельный классификатор, то есть общее количество классификаторов равно числу пар классов.\n",
+    "Для каждой пары классов строится отдельный классификатор, общее количество классификаторов равно числу пар классов.\n",
     "В процессе классификации каждый классификатор решает, какой из двух классов относится к примеру, и итоговое решение принимается большинством голосов.\n",
     "В библиотеке scikit-learn класс SVC автоматически использует подход OvA для многоклассовых задач, если количество классов больше двух.\n",
     "\n",
@@ -1629,7 +1629,7 @@
    "source": [
     "4. Как метод опорных векторов может быть использован для решения задачи регрессии?\n",
     "\n",
-    "Метод опорных векторов (SVM) может быть использован для решения задачи регрессии. В этом случае метод известен как «опорно-векторная регрессия». \n",
+    "Метод опорных векторов может быть использован для решения задачи регрессии. В этом случае метод известен как «опорно-векторная регрессия». \n",
     "\n",
     "Принцип работы заключается в поиске гиперплоскости, при которой риск в многомерном пространстве будет минимальным. По сравнению с традиционной регрессионной моделью SVM оценивает коэффициенты путём минимизации квадратичных потерь. Так, если прогнозное значение попадает в область гиперплоскости, то потери равны нулю, в противном случае — разности прогнозного и фактического значений. \n",
     "\n",
